# kglite

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CYPHER.md  Cargo.toml  FLUENT.md  Makefile  README.md  ROADMAP.md  bolt_implementation.md  mypy_stubtest.ini  pyproject.toml  roadmap.md  stubtest_allowlist.txt
benchmarks/graphgen/: Cargo.toml  README.md
benchmarks/graphgen/src/: main.rs
crates/kglite/: Cargo.toml  README.md
crates/kglite-bolt-server/: Cargo.toml  Dockerfile  LICENSE  README.md
crates/kglite-bolt-server/src/: auth.rs  backend.rs  error_map.rs  main.rs  value_adapter.rs
crates/kglite-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/kglite-c/include/: kglite.h
crates/kglite-c/src/: abi.rs  alloc.rs  datasets.rs  embedder.rs  ffi.rs  graph.rs  lib.rs  result.rs  session.rs  status.rs  strings.rs
crates/kglite-c/src/datasets/: mod.rs  sec.rs  sodir.rs  wikidata.rs
crates/kglite-c/tests/: integration.rs
crates/kglite-cli/: Cargo.toml  README.md  pyproject.toml
crates/kglite-cli/skills/kglite-code-review/: SKILL.md
crates/kglite-cli/skills/kglite-code-review/references/: public-repositories.md
crates/kglite-cli/src/: code_tree_cli.rs  exec.rs  format.rs  helper.rs  lib.rs  main.rs  repl.rs  skill.rs
crates/kglite-mcp-server/: Cargo.toml  README.md
crates/kglite-mcp-server/examples/: domain_tools.rs
crates/kglite-mcp-server/skills/: code_graph_analysis.md  code_graph_views.md  cypher_query.md  explore.md  graph_overview.md  read_code_source.md  save_graph.md
crates/kglite-mcp-server/src/: code_source.rs  cypher_tools.rs  explore.rs  lib.rs  main.rs  preprocessor.rs  selftest.rs  tools.rs  value_codecs.rs
crates/kglite-py/: Cargo.toml
crates/kglite-py/src/: error_py.rs  graphgen.rs  lib.rs  sec.rs  sodir.rs  util.rs  wikidata.rs
crates/kglite-py/src/code_tree/: mod.rs
crates/kglite-py/src/code_tree/pyapi/: entry.rs  mod.rs
crates/kglite-py/src/datatypes/: mod.rs  py_in.rs  py_out.rs  type_conversions.rs
crates/kglite-py/src/graph/: mod.rs
crates/kglite-py/src/graph/embedder/: mod.rs  py_adapter.rs
crates/kglite-py/src/graph/languages/: mod.rs
crates/kglite-py/src/graph/pyapi/: algorithms.rs  blueprint.rs  export.rs  frozen.rs  indexes.rs  kg_core.rs  kg_fluent.rs  kg_introspection.rs  kg_mutation.rs  mod.rs  networkx.rs  result_view.rs  session.rs  spatial.rs  timeseries.rs  transaction.rs  vector.rs
crates/kglite-py/src/okf/: mod.rs
crates/kglite-py/src/okf/pyapi/: entry.rs  mod.rs
crates/kglite-sec/: Cargo.toml
crates/kglite-sec/src/: catalog.rs  client.rs  error.rs  extract.rs  fetch.rs  lib.rs  planning.rs  slicing.rs
crates/kglite-sec/src/extract/: mod.rs  orchestrator.rs  provenance.rs  sinks.rs  util.rs
crates/kglite-sec/src/extract/forms/: def14a.rs  eightk.rs  form13f.rs  form144.rs  form3.rs  form4.rs  form5.rs  formd.rs  mod.rs  npx.rs  ownership.rs  prospectus.rs  s1.rs  s3.rs  s4.rs  schedule13.rs  ten_k.rs  ten_q.rs  xbrl.rs
crates/kglite-sec/src/extract/identity/: companies.rs  mod.rs
crates/kglite-sec/src/parsers/: def14a.rs  earnings_release.rs  eightk.rs  exhibit21.rs  f13f.rs  form144.rs  form4.rs  formd.rs  fsnds.rs  idx.rs  mod.rs  offering.rs  ownership_table.rs  related_party.rs  sc13d.rs  submissions.rs  summary_compensation.rs
crates/kglite-sec/tests/: test_fetch_live.rs  test_idx_parser.rs
crates/kglite-sodir/: Cargo.toml
crates/kglite-sodir/src/: blueprint.rs  catalog.rs  client.rs  error.rs  fetch.rs  index.rs  lib.rs  orchestrator.rs  preprocess.rs
crates/kglite-sodir/tests/: test_fetch_live.rs
crates/kglite-wikidata/: Cargo.toml
crates/kglite-wikidata/src/: cache.rs  client.rs  error.rs  layout.rs
crates/kglite/examples/: embedded_basic.rs  embedded_blueprint.rs  embedded_session.rs
crates/kglite/src/: bincode_wire_contract_tests.rs  error.rs  lib.rs
crates/kglite/src/code_tree/: cross_lang.rs  docs.rs  mod.rs  models.rs  repo.rs  rev.rs
crates/kglite/src/code_tree/builder/: call_edges.rs  load.rs  mod.rs  other_edges.rs
crates/kglite/src/code_tree/docs/: mod.rs  rst.rs
crates/kglite/src/code_tree/parsers/: cpp.rs  csharp.rs  css.rs  dart.rs  go.rs  html.rs  java.rs  php.rs  python.rs  shared.rs  swift.rs  typescript.rs
crates/kglite/src/datasets/: blocking.rs  http.rs  mod.rs
crates/kglite/src/datasets/sec/: blocking.rs  buckets.rs  catalog.rs  client.rs  dispatch.rs  error.rs  fetch.rs  layout.rs  mod.rs  planning.rs  slicing.rs  tickers.rs
crates/kglite/src/datasets/sodir/: blueprint.rs  catalog.rs  client.rs  error.rs  fetch.rs  geojson_wkt.rs  index.rs  layout.rs  mod.rs  orchestrator.rs  preprocess.rs
crates/kglite/src/datasets/wikidata/: cache.rs  client.rs  error.rs  freshness.rs  mod.rs
crates/kglite/src/datatypes/: mod.rs  values.rs
crates/kglite/src/graph/: dir_graph.rs  embedding_carry.rs  explore.rs  handle.rs  mod.rs  schema.rs  schema_tests.rs  wal.rs
crates/kglite/src/graph/algorithms/: centrality.rs  clustering.rs  community.rs  graph_algorithms.rs  graph_algorithms_tests.rs  hnsw.rs  mod.rs  vector.rs
crates/kglite/src/graph/blueprint/: build.rs  csv_loader.rs  csv_stream.rs  expr.rs  json_records.rs  json_records_tests.rs  mod.rs  schema.rs  validation.rs
crates/kglite/src/graph/core/: calculations.rs  data_retrieval.rs  filtering.rs  iterators.rs  statistics.rs  traversal.rs  value_operations.rs
crates/kglite/src/graph/dir_graph/: caches.rs  dir_graph_tests.rs  disk_persistence.rs  independent_copy.rs  mod.rs  node_write.rs  schema_ops.rs
crates/kglite/src/graphgen/: mod.rs
crates/kglite/src/okf/: build.rs  frontmatter.rs  links.rs  mod.rs  model.rs  walk.rs
crates/kglite/src/param/: mod.rs
crates/kglite/src/serde_codec/: bincode_v1.rs  mod.rs  postcard_v1.rs  tests.rs
crates/kglite/tests/: api_algorithms.rs  datasets_sec_fetch_live.rs  datasets_sec_idx_parser.rs  datasets_sodir_fetch_live.rs  loom_session.rs
crates/kglite/tests/fixtures/: master.idx.sample
tests/fixtures/rust-embed-consumer/: Cargo.toml
tests/fixtures/rust-embed-consumer/src/: main.rs
(+923 files in other folders)
