[workspace]
members = [
    "crates/kglite",
    "crates/kglite-py",
    "crates/kglite-mcp-server",
    "crates/kglite-bolt-server",
    "crates/kglite-c",
    "crates/kglite-cli",
]
resolver = "2"

# Single source of truth for the crate version. Every member crate sets
# `version.workspace = true`, so a release bumps this one line instead of
# six. All published crates ship in lockstep at the same version.
[workspace.package]
version = "0.12.7"

# Phase G.4 — workspace root is now virtual (no `[package]`).
# Polars-style layout: each crate has its own home under
# `crates/`. The `kglite` Python wheel is built by maturin from
# `crates/kglite-py/` (see `pyproject.toml`'s `[tool.maturin]
# manifest-path`).

# Local dev override — pulls the paolobarbolini bzip2-rs git fork
# (which has `ParallelDecoderReader` + `ThreadPool` trait, neither
# of which is in the crates.io 0.1.2 release) when any workspace
# member resolves `bzip2-rs`. The patch is workspace-only and is
# NOT carried into the published manifest by `cargo publish` —
# crates.io consumers who enable `kglite/parallel-bz2` will need
# their own equivalent `[patch.crates-io]` until upstream
# bzip2-rs publishes a 0.2.x with these APIs. See
# `crates/kglite/Cargo.toml`'s `parallel-bz2` feature for the
# story.
[patch.crates-io]
bzip2-rs = { git = "https://github.com/paolobarbolini/bzip2-rs", rev = "2be7684b444987d6cc7b0b226bda7581be739e3c" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Same codegen as release but keeps line tables + symbols so samply
# / `cargo flamegraph` / Instruments can attribute hot frames. Use
# with `maturin develop --profile profiling` for Python-driven
# profiling, or `cargo build --profile profiling --bin bz2_bench`
# for native binaries.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
