[workspace]
members = [
    "crates/kglite",
    "crates/kglite-py",
    "crates/kglite-mcp-server",
    "crates/kglite-bolt-server",
    "crates/kglite-c",
    "crates/kglite-cli",
]
resolver = "2"

# Single source of truth for the crate version. Every member crate sets
# `version.workspace = true`, so a release bumps this one line instead of
# six. All published crates ship in lockstep at the same version.
[workspace.package]
version = "0.13.2"

# Phase G.4 — workspace root is now virtual (no `[package]`).
# Polars-style layout: each crate has its own home under
# `crates/`. The `kglite` Python wheel is built by maturin from
# `crates/kglite-py/` (see `pyproject.toml`'s `[tool.maturin]
# manifest-path`).

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Same codegen as release but keeps line tables + symbols so samply
# / `cargo flamegraph` / Instruments can attribute hot frames. Use
# with `maturin develop --profile profiling` for Python-driven
# profiling, or `cargo build --profile profiling --bin bz2_bench`
# for native binaries.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
