[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "kglite"
description = "A high-performance graph database library with Python bindings written in Rust"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com"}
]
keywords = ["graph", "database", "knowledge-graph", "rust", "high-performance", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # 0.9.41+: MCP server runtime deps (~6 MB total) moved out of the
    # old `[mcp]` extras into default. `pip install kglite` now gets
    # a working `kglite-mcp-server` console script with no extras-dance.
    # Each dep is small and used by the MCP server: `mcp` for stdio
    # protocol, `pyyaml` for manifest parsing, `aiohttp` for the
    # optional `extensions.csv_http_server`, `watchdog` for `--watch`
    # mode. (The 0.9.40 drop of the `mcp-methods` PyPI wheel made
    # this feasible — the remaining footprint is ~6 MB rather than the
    # prior ~23 MB.)
    "mcp>=1.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "watchdog>=4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
# NetworkX interop: `KnowledgeGraph.to_networkx()` /
# `kglite.from_networkx()`. Optional — networkx is never imported at
# module load. `from_networkx` also uses pandas (already required by the
# DataFrame loaders), so only networkx is declared here.
networkx = ["networkx>=3.0"]
# Semantic search via `text_score()` and the manifest-declared
# `extensions.embedder`. Heavy install (~100 MB) because of
# fastembed → onnxruntime + tokenizers + pillow + huggingface-hub —
# kept opt-in for users who don't need embeddings. Same ONNX backend
# as the 0.9.18/0.9.19 Rust fastembed-rs path, same
# `~/.cache/fastembed/` model cache.
embed = ["fastembed>=0.4"]

# `pip install kglite` → `kglite-mcp-server` on PATH. 0.9.20+: the
# entry point resolves to the Python implementation under
# `kglite.mcp_server.server:main`. Pre-0.9.20 this pointed at a
# launcher that exec'd a bundled Rust binary — that approach was
# retired because it forced a per-Python-version wheel matrix (no
# abi3 escape for binaries linking pyo3). The Python entry point
# wraps the existing kglite Python API; Cypher execution still
# happens under the GIL release inside `cypher()`, so hot-path
# performance is unchanged.
[project.scripts]
kglite-mcp-server = "kglite.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/kkollsga/kglite"
Repository = "https://github.com/kkollsga/kglite"
Documentation = "https://kglite.readthedocs.io"
Changelog = "https://github.com/kkollsga/kglite/blob/main/CHANGELOG.md"
Issues = "https://github.com/kkollsga/kglite/issues"

[tool.maturin]
# Phase G.4 (polars-style split): the PyO3 wrapper crate moved to
# crates/kglite-py/. `manifest-path` tells maturin where to find
# the Cargo.toml whose [lib] cdylib produces the wheel's .so.
# The Python source (`kglite/` package at the workspace root) is
# unchanged.
manifest-path = "crates/kglite-py/Cargo.toml"
# `module-name = "kglite.kglite"` overrides maturin's default
# (which would use kglite-py's `[lib] name = "kglite_py"` and
# produce `kglite/kglite_py.abi3.so`). The Python package's
# `from .kglite import *` reaches for `kglite.abi3.so`, so we
# rename the wheel's extension to match.
module-name = "kglite.kglite"
# extension-module must be added via maturin features (not Cargo.toml default)
# so `cargo test` can still link. abi3-py310 is in Cargo.toml since it affects
# symbol visibility even outside maturin builds.
features = ["python-extension"]
python-source = "."

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["kglite"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["kglite", "tests"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"benchmarks/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmark tests (deselect with '-m not benchmark')",
    "slow: slow tests taking >5s (deselect with '-m not slow')",
    "parity: cross-storage-mode oracle tests (memory vs mapped vs disk)",
    "stress: opt-in stress tests (30GB mapped, 10k-hop) — select with '-m stress'",
    "differential: cypher optimizer differential tests (optimized vs. naive)",
    "model_download: tests that fetch multi-GB ML model weights (bge-m3 etc.). Opt-in via '-m model_download'.",
    "binary_size: structural gate that needs the release .dylib built (cargo build --release). CI runs it in the python-tests job which already builds the release artifact for the MCP smoke test.",
    "bolt: Bolt protocol smoke tests (require kglite-bolt-server binary, neo4j driver, port binding). Failing-by-design contract per `bolt_implementation.md` Phase B — all 8 tests xfail(strict=True) until each Phase C sub-phase retires its slice.",
    "bolt_stress: Bolt-protocol concurrency/stress tests (slow; multi-session under load). Opt-in via '-m bolt_stress'; excluded from default suite to keep iteration fast.",
]
addopts = "-m 'not benchmark and not parity and not stress and not model_download and not binary_size and not bolt and not bolt_stress'"

[tool.mypy]
ignore_missing_imports = true
exclude = "kglite/blueprint/"

[[tool.mypy.overrides]]
module = ["kglite.blueprint.*"]
ignore_errors = true

[tool.coverage.run]
source = ["kglite"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover", "raise NotImplementedError"]
