[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "kglite"
description = "A high-performance graph database library with Python bindings written in Rust"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com"}
]
keywords = ["graph", "database", "knowledge-graph", "rust", "high-performance", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # 0.10.25: the wheel has no required Python runtime deps. The MCP server
    # runtime deps (mcp / pyyaml / aiohttp / watchdog) were removed when the
    # Python MCP server was retired — the MCP server is now the pure-Rust
    # `kglite-mcp-server` binary (`cargo install kglite-mcp-server`). The
    # engine + code_tree are the compiled extension; nothing here links a
    # Python package at import time.
]
dynamic = ["version"]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
# NetworkX interop: `KnowledgeGraph.to_networkx()` /
# `kglite.from_networkx()`. Optional — networkx is never imported at
# module load. `from_networkx` also uses pandas (already required by the
# DataFrame loaders), so only networkx is declared here.
networkx = ["networkx>=3.0"]
# The MCP server (and its Python `extensions.embedder` fastembed path) was
# retired in 0.10.25 — the server is now `cargo install kglite-mcp-server`
# (pure Rust; embedder via the Rust fastembed-rs feature). To run a Python
# embedder with the engine's `g.set_embedder(...)`, install fastembed
# directly and pass a duck-typed embedder (see the Embedder protocol in
# kglite/__init__.pyi); kglite no longer ships an `[embed]` extra.

# No `[project.scripts]`: `kglite-mcp-server` is a Rust binary installed via
# `cargo install kglite-mcp-server`, not a Python console script. (Through
# 0.10.24 the wheel shipped a Python `kglite-mcp-server` entry point; the
# Python server was removed in 0.10.25 to consolidate on the single Rust
# implementation. See docs/operators/index.md and the CHANGELOG.)

[project.urls]
Homepage = "https://github.com/kkollsga/kglite"
Repository = "https://github.com/kkollsga/kglite"
Documentation = "https://kglite.readthedocs.io"
Changelog = "https://github.com/kkollsga/kglite/blob/main/CHANGELOG.md"
Issues = "https://github.com/kkollsga/kglite/issues"

[tool.maturin]
# Phase G.4 (polars-style split): the PyO3 wrapper crate moved to
# crates/kglite-py/. `manifest-path` tells maturin where to find
# the Cargo.toml whose [lib] cdylib produces the wheel's .so.
# The Python source (`kglite/` package at the workspace root) is
# unchanged.
manifest-path = "crates/kglite-py/Cargo.toml"
# `module-name = "kglite.kglite"` overrides maturin's default
# (which would use kglite-py's `[lib] name = "kglite_py"` and
# produce `kglite/kglite_py.abi3.so`). The Python package's
# `from .kglite import *` reaches for `kglite.abi3.so`, so we
# rename the wheel's extension to match.
module-name = "kglite.kglite"
# extension-module must be added via maturin features (not Cargo.toml default)
# so `cargo test` can still link. abi3-py310 is in Cargo.toml since it affects
# symbol visibility even outside maturin builds.
features = ["python-extension"]
python-source = "."

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["kglite"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["kglite", "tests"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"benchmarks/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmark tests (deselect with '-m not benchmark')",
    "slow: slow tests taking >5s (deselect with '-m not slow')",
    "parity: cross-storage-mode oracle tests (memory vs mapped vs disk)",
    "stress: opt-in stress tests (30GB mapped, 10k-hop) — select with '-m stress'",
    "differential: cypher optimizer differential tests (optimized vs. naive)",
    "model_download: tests that fetch multi-GB ML model weights (bge-m3 etc.). Opt-in via '-m model_download'.",
    "binary_size: structural gate that needs the release .dylib built (cargo build --release). CI runs it in the python-tests job which already builds the release artifact for the MCP smoke test.",
    "bolt: Bolt protocol smoke tests (require kglite-bolt-server binary, neo4j driver, port binding). Failing-by-design contract per `bolt_implementation.md` Phase B — all 8 tests xfail(strict=True) until each Phase C sub-phase retires its slice.",
    "bolt_stress: Bolt-protocol concurrency/stress tests (slow; multi-session under load). Opt-in via '-m bolt_stress'; excluded from default suite to keep iteration fast.",
]
addopts = "-m 'not benchmark and not parity and not stress and not model_download and not binary_size and not bolt and not bolt_stress'"

[tool.mypy]
ignore_missing_imports = true
exclude = "kglite/blueprint/"

[[tool.mypy.overrides]]
module = ["kglite.blueprint.*"]
ignore_errors = true

[tool.coverage.run]
source = ["kglite"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover", "raise NotImplementedError"]
