[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "kglite"
description = "Embedded Cypher knowledge graph for Python with a bundled MCP server, describe() schema, and code-graph parser for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com"}
]
keywords = ["graph", "database", "knowledge-graph", "cypher", "embedded-database", "mcp", "llm-agents", "code-analysis", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # The wheel has no required Python runtime deps. The former Python MCP
    # server's deps (mcp / pyyaml / aiohttp / watchdog) are gone — the MCP
    # server is the pure-Rust `kglite-mcp-server`, and as of 0.10.26 it ships
    # *inside* this wheel (statically linked into the extension, sharing the
    # one engine; the `kglite-mcp-server` console script just forwards argv to
    # it). The engine + code_tree + server are all the compiled extension;
    # nothing here links a Python package at import time.
]
dynamic = ["version"]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
# DataFrame loading and conversion are optional so graph-only and MCP users
# keep a zero-dependency base wheel. Install this extra for pandas workflows.
pandas = ["pandas>=2.0"]
# NetworkX interop: `KnowledgeGraph.to_networkx()` /
# `kglite.from_networkx()`. Optional — networkx is never imported at
# module load. `from_networkx` converts records through pandas, so the
# integration extra installs both of its runtime dependencies.
networkx = ["networkx>=3.0", "pandas>=2.0"]
# No `embed` extra (removed in 0.10.28). Embedding is bring-your-own: the user
# installs whatever embedding library they want and names it. For engine-level
# semantic search, pass any duck-typed object to `g.set_embedder(...)` (see the
# `Embedder` protocol in kglite/__init__.pyi). For the MCP server, declare
# `extensions.embedder: {library: fastembed | sentence-transformers | …, model: …}`
# and `pip install` that library (or `cargo install --features fastembed` for
# the Rust `library: fastembed-rs`). The wheel pins no embedding library.

# `kglite-mcp-server` console script. As of 0.10.26 the Rust MCP server is
# bundled into the wheel (statically linked into the extension via the
# `kglite-mcp-server` *library*, sharing the one engine — no separate wheel,
# no duplicated engine). This entry point is a thin shim that forwards
# `sys.argv[1:]` into the Rust `run` via `kglite._run_mcp_server`. So
# `pip install kglite` gives you the same `kglite-mcp-server` command as
# `cargo install kglite-mcp-server`. (Through 0.10.24 this was a Python
# server; 0.10.25 dropped it for cargo-only; 0.10.26 brings it back pip-native
# as the bundled Rust server.)
[project.scripts]
kglite-mcp-server = "kglite.mcp_server:main"

[project.urls]
Homepage = "https://github.com/kkollsga/kglite"
Repository = "https://github.com/kkollsga/kglite"
Documentation = "https://kglite.readthedocs.io"
Changelog = "https://github.com/kkollsga/kglite/blob/main/CHANGELOG.md"
Issues = "https://github.com/kkollsga/kglite/issues"

[tool.maturin]
# Phase G.4 (polars-style split): the PyO3 wrapper crate moved to
# crates/kglite-py/. `manifest-path` tells maturin where to find
# the Cargo.toml whose [lib] cdylib produces the wheel's .so.
# The Python source (`kglite/` package at the workspace root) is
# unchanged.
manifest-path = "crates/kglite-py/Cargo.toml"
# `module-name = "kglite.kglite"` overrides maturin's default
# (which would use kglite-py's `[lib] name = "kglite_py"` and
# produce `kglite/kglite_py.abi3.so`). The Python package's
# `from .kglite import *` reaches for `kglite.abi3.so`, so we
# rename the wheel's extension to match.
module-name = "kglite.kglite"
# extension-module must be added via maturin features (not Cargo.toml default)
# so `cargo test` can still link. abi3-py310 is in Cargo.toml since it affects
# symbol visibility even outside maturin builds.
features = ["python-extension"]
python-source = "."

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["kglite"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["kglite", "tests"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"benchmarks/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmark tests (deselect with '-m not benchmark')",
    "slow: slow tests taking >5s (deselect with '-m not slow')",
    "parity: cross-storage-mode oracle tests (memory vs mapped vs disk)",
    "stress: opt-in stress tests (30GB mapped, 10k-hop) — select with '-m stress'",
    "differential: cypher optimizer differential tests (optimized vs. naive)",
    "model_download: tests that fetch multi-GB ML model weights (bge-m3 etc.). Opt-in via '-m model_download'.",
    "binary_size: structural gate that needs the release .dylib built (cargo build --release). CI runs it in the python-tests job which already builds the release artifact for the MCP smoke test.",
    "bolt: Bolt protocol smoke/correctness tests (require the kglite-bolt-server release binary, neo4j driver, port binding). Phase C of docs/history/bolt-implementation.md shipped, so the original xfail(strict=True) contract stubs are now ordinary passing tests. Select with '-m bolt' or `make test-full`.",
    "bolt_stress: Bolt-protocol concurrency/stress tests (slow; multi-session under load). Opt-in via '-m bolt_stress'; excluded from default suite to keep iteration fast.",
]
addopts = "-m 'not benchmark and not parity and not stress and not model_download and not binary_size and not bolt and not bolt_stress'"

[tool.mypy]
ignore_missing_imports = true
exclude = "kglite/blueprint/"

[[tool.mypy.overrides]]
module = ["kglite.blueprint.*"]
ignore_errors = true

[tool.coverage.run]
source = ["kglite"]
branch = true
relative_files = true
omit = ["kglite/**/tests/**"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover", "raise NotImplementedError"]
