[package]
name = "kglite-cli"
version.workspace = true
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
license = "MIT"
description = "Pure-Rust KGLite CLI: Cypher shell and offline code-review skill installer"
readme = "README.md"
repository = "https://github.com/kkollsga/kglite"
homepage = "https://github.com/kkollsga/kglite"
keywords = ["cypher", "repl", "shell", "knowledge-graph", "kglite"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "kglite"
path = "src/main.rs"

[dependencies]
# Reuse kglite's pure-Rust surface (kglite::api::*) — no libpython link
# in the resulting binary. Mirrors the kglite-bolt-server / kglite-mcp-server
# pattern: path dep locally, version requirement on `cargo publish`. Version
# kept in sync with crates/kglite/Cargo.toml's package.version each release.
kglite = { version = "0.14", path = "../kglite", default-features = false, features = ["okf"] }

# Line editor: prompt, history, Emacs/Vi keybindings, Ctrl-C/Ctrl-D handling.
# The standard Rust REPL choice; not otherwise a workspace dep.
rustyline = "18"

# SIGINT → cancel the in-flight query (sets the flag execute_mut polls).
# rustyline keeps the prompt in raw mode, so Ctrl-C only raises SIGINT while
# a query is actually running.
ctrlc = "3"

# `.mode json` output via kglite::api::param::kglite_value_to_json.
serde_json = "1"

# `.import <file.csv> <Type>` — parse the CSV; rows are passed as a Cypher
# `$rows` param (values parameterized, not interpolated). Already a `kglite` dep.
csv = "1.4"

clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
