[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kglite-cli"
description = "Pure-Rust KGLite CLI: Cypher shell, code-graph builder, and offline code-review skill installer."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["cypher", "code-review", "agent-skill", "knowledge-graph", "kglite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Database",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kkollsga/kglite"
Repository = "https://github.com/kkollsga/kglite"

# Build a binary wheel (not a Python extension): maturin compiles the
# `kglite-cli` crate's `[[bin]]` and installs it as the `kglite` command, so
# `pip install kglite-cli` puts the shell on PATH. No Python sources, no
# extension module — the inverse of the main `kglite` wheel.
[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
